# MockSwitch-POC

./: .gitignore  README.md  package-lock.json
.github/: copilot-instructions.md  pull_request_template.md
api/: .taiapiproject  pyproject.toml
api/api/: __dev__.py  __main__.py
api/api/database/public/crud/asyn/: __init__.py  daos.py  dtos.py  session_manager.py
api/api/database/public/crud/asyn/utils/: funcs.py
api/api/database/public/models/: __init__.py
api/api/routers/: __init__.py
api/api/routers/database/: __init__.py
api/api/routers/database/public/: __init__.py  router_agenda.py  router_enums.py  router_usuario.py
app/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  index.css
app/frontend/src/api/: index.ts  mockswitch_config.ts
app/frontend/src/auth/: index.ts
app/frontend/src/components/: login-form.tsx
app/frontend/src/contexts/: AuthContext.tsx
app/frontend/src/data/: agenda.ts  auth.ts  example.ts
app/frontend/src/interfaces/: AgendaClientInterface.ts  AuthClientInterface.ts
app/frontend/src/lib/: keycloak.ts  utils.ts
app/frontend/src/services/: AuthService.ts  service_example.ts
app/frontend/src/types/: agenda.ts  (+1 more)
database/: .taisqlproject  pyproject.toml
database/database/public/crud/syn/: __init__.py  daos.py  dtos.py  session_manager.py
database/database/public/crud/syn/utils/: funcs.py  rls.py
database/database/public/models/: __init__.py
database/rbac/: public.py
database/schemas/: public.py
database/views/public/: user_stats.sql
(+14 files in other folders)
