[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Alejandro Patiño García",email = "alexpatino92@yahoo.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
    "tai-sql (>=0.3.59,<1.0)",
    "fastapi[standard] (>=0.116.1,<1.0)",
    "uvicorn[standard] (>=0.30.0,<1.0)",
    "asyncpg (>=0.30.0,<1.0)",
    "python-jose (>=3.5.0,<4.0)",
    "python-multipart (>=0.0.9,<1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
