[project]
name = "database"
version = "0.1.0"
description = ""
authors = [
    {name = "Alejandro Patiño García",email = "alexpatino92@yahoo.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
    "sqlalchemy (>=2.0.42,<3.0)",
    "psycopg2-binary (>=2.9.10,<3.0)",
    "cryptography (>=45.0.4,<46.0)",
    "pydantic (>=2.11.7,<3.0)",
    "tai-alphi (>=2.0.1,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
